--- a/join.html
+++ b/join.html
@@ -55,18 +55,23 @@
         </ul>
       </nav>
     </header>
+
     <div class="joinform">
       <h1>회원가입</h1>
       <div class="join">
         <div class="box1">
-          <i class="fa-solid fa-user"></i>
-          <h2>자원봉사자 가입하기</h2>
-          <h6>자원봉사에 참여해보세요</h6>
+          <a href="takejoin.html">
+            <i class="fa-solid fa-user"></i>
+            <h2>자원봉사자 가입하기</h2>
+            <h6>자원봉사에 참여해보세요</h6></a
+          >
         </div>
         <div class="box2">
-          <i class="fa-solid fa-users"></i>
-          <h2>기관 가입하기</h2>
-          <h6>자원봉사자를 찾아보세요</h6>
+          <a href="takejoin copy.html">
+            <i class="fa-solid fa-users"></i>
+            <h2>기관 가입하기</h2>
+            <h6>자원봉사자를 찾아보세요</h6>
+          </a>
         </div>
       </div>
     </div>
