--- a/takejoin.html
+++ b/takejoin.html
@@ -161,7 +161,7 @@
             <button type="submit" class="btn btnBlack" id="alertjoin"><a href="login.html">가입하기</a></button>
           </li>
           <li>
-            <button type="reseet" class="btn btnGray">취소</button>
+            <button type="reseet" class="btn btnGray"><a href="join.html">취소</a></button>
           </li>
         </ul>
       </form>
