--- a/join.html
+++ b/join.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-PP6TD7FK");
+    </script>
+    <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>나눔메이트</title>
@@ -14,46 +28,100 @@
     <meta name="theme-color" content="#ffffff" />
     <!-- 주소.이미지.키워드 추가확인필요 -->
     <!-- SEO -->
-    <meta name="title" content="일상속 나눔을 만드는 나눔메이트" />
+    <meta name="title" content="일상나눔을 만드는 나눔메이트" />
     <meta name="keywords" content="나눔메이트, 나눔, 자원봉사, 프로그램, 대구봉사 " />
     <meta name="author" content="WIDEMOBILE" />
     <meta name="description" content="나눔메이트, 나눔, 자원봉사, 프로그램, 대구봉사 " />
     <meta name="Robots" content="noindex, nofollow" />
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="일상속 나눔을 만드는 나눔메이트" />
-    <meta property="og:site_name" content="일상속 나눔을 만드는 나눔메이트" />
-    <meta property="og:description" content="나눔메이트, 나눔, 자원봉사, 프로그램, 대구봉사 " />
-    <meta property="og:image" content="http://127.0.0.1:5500/images/logo_bg.png" />
-    <meta property="og:url" content="http://127.0.0.1:5500/index.html" />
-    <link rel="canonical" href="https://www.dosiraktong.com" />
+    <meta property="og:title" content="일상나눔을 만드는 나눔메이트" />
+    <meta property="og:site_name" content="나눔메이트" />
+    <meta property="og:description" content="일상속 나눔을 만들어갑니다. " />
+    <meta property="og:image" content="https://pro-nanum2.vercel.app/images/visual-img2.png" />
+    <meta property="og:url" content="https://pro-nanum2.vercel.app/" />
+    <link rel="canonical" href="https://pro-nanum2.vercel.app/" />
     <!-- Twitter -->
-    <meta name="twitter:title" content="일상속 나눔을 만드는 나눔메이트" />
+    <meta name="twitter:title" content="일상나눔을 만드는 나눔메이트" />
     <meta name="twitter:description" content="나눔메이트, 나눔, 자원봉사, 프로그램, 대구봉사 " />
     <!-- css -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/seunga.css " />
-    <link rel="stylesheet" href="css/minju.css" />
-    <link rel="stylesheet" href="css/join.css" />
-
+    <!-- <link rel="stylesheet" href="css/kyungran.css " /> -->
+    <link rel="stylesheet" href="css/minju.css " />
+    <!-- <link rel="stylesheet" href="css/res_kyungran.css" /> -->
+    <link rel="stylesheet" href="css/join.css">
     <!-- 폰트어썸 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- 제이쿼리 -->
+    <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js" integrity="sha512-3j3VU6WC5rPQB4Ld1jnLV7Kd5xr+cq9avvhwqzbH/taCRNURoeEpoPBK9pDyeukwSxwRPJ8fDgvYXd6SkaZ2TA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Sly/1.6.1/sly.min.js"></script>
+    <!-- Js -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="js/html5shiv.js"></script>
+    <!-- <script src="js/prefixfree.min.js"></script> -->
+    <script src="js/respond.min.js"></script>
+    <script src="js/seunga.js"></script>
+    <!-- <script src="js/kyungran.js"></script>
+    <script src="js/minju.js"></script> -->
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L34VXKLKJD"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-L34VXKLKJD");
+    </script>
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PP6TD7FK" height="0" width="0" style="display: none; visibility: hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    <!-- 승아 -->
     <header>
-      <nav class="top-nav">
-        <a href="index.html"><img src="images/logo_bg2.png" alt="로고이미지" /></a>
-        <ul class="top-menu">
+      <div class="hd-inner">
+        <nav class="top-nav" id="nav">
+          <a href="#"><img src="images/logo_bg2.png" alt="로고이미지2" class="logo-img" /></a>
+
+          <ul class="top-menu">
+            <li><a href="#">서비스 소개</a></li>
+            <li><a href="#">프로그램</a></li>
+            <li><a href="#">게시판</a></li>
+            <li><a href="#">후기</a></li>
+            <div class="log">
+              <li><a href="login.html">로그인</a></li>
+              <li><a href="join.html">회원가입</a></li>
+            </div>
+          </ul>
+        </nav>
+      </div>
+      <!-- 햄버거 버튼 -->
+      <button class="m-bt">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <!-- 모바일 메뉴 리스트 -->
+      <div class="nav-mb">
+        <img src="images/logo.png" alt="로고이미지" />
+        <ul class="nav-mb-gnb">
           <li><a href="#">서비스 소개</a></li>
           <li><a href="#">프로그램</a></li>
           <li><a href="#">게시판</a></li>
           <li><a href="#">후기</a></li>
-          <div class="log">
-            <li><a href="login.html">로그인</a></li>
-            <li><a href="join.html">회원가입</a></li>
-          </div>
         </ul>
-      </nav>
+        <div class="m-log">
+          <li><a href="login.html">로그인</a></li>
+          <li><a href="join.html">회원가입</a></li>
+        </div>
+      </div>
     </header>
 
     <div class="joinform">
