sub2 수정 및 반응형 적용

--- a/sub2.html
+++ b/sub2.html
@@ -32,8 +32,8 @@
     <meta name="twitter:description" content="나눔메이트, 나눔, 자원봉사, 프로그램, 대구봉사 " />
     <!-- css -->
     <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/seunga.css " /> 
-     <link rel="stylesheet" href="css/sub2.css" />
+    <link rel="stylesheet" href="css/seunga.css " />
+    <link rel="stylesheet" href="css/sub2.css" />
     <link rel="stylesheet" href="css/minju.css" />
     <!-- bx슬라이더 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.15/jquery.bxslider.css" integrity="sha512-rV4fiystTwIvs71MLqeLbKbzosmgDS7VU5Xqk1IwFitAM+Aa9x/8Xil4CW+9DjOvVle2iqg4Ncagsbgu2MWxKQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -65,52 +65,145 @@
       </nav>
     </header>
 
-    <div class="sub2_wrap">
-      <div class="sub2_inner">
-        <!-- 왼쪽 섹션 -->
-        <div class="sub2_left">
-          <div id="gallery_wrap">
-            <ul class="slide_gallery">
-              <li><img src="images/kyungran/sub_1.png" alt="사진1" /></li>
-              <li><img src="images/kyungran/sub_2.png" alt="사진2" /></li>
-              <li><img src="images/kyungran/sub_3.png" alt="사진3" /></li>
-            </ul>
-            <ul class="slider-page">
-              <li>
-                <a href="#" data-slide-index="0"> <img src="images/kyungran/sub_pg1.png" alt="사진1" /></a>
-              </li>
-              <li>
-                <a href="#" data-slide-index="1"> <img src="images/kyungran/sub_pg2.png" alt="사진2" /></a>
-              </li>
-              <li>
-                <a href="#" data-slide-index="2"> <img src="images/kyungran/sub_pg3.png" alt="사진3" /></a>
-              </li>
-            </ul>
+    <!-- 경란 -->
+    <section>
+      <div class="sub2">
+        <div class="sub2_inner">
+          <!-- 왼쪽 섹션 -->
+          <div class="sub2_left">
+            <div id="gallery_wrap">
+              <ul class="slide_gallery">
+                <li><img src="images/kyungran/sub_1.png" alt="사진1" /></li>
+                <li><img src="images/kyungran/sub_2.png" alt="사진2" /></li>
+                <li><img src="images/kyungran/sub_3.png" alt="사진3" /></li>
+              </ul>
+              <ul class="slider-page">
+                <li>
+                  <a href="#" data-slide-index="0"> <img src="images/kyungran/sub_pg1.png" alt="사진1" /></a>
+                </li>
+                <li>
+                  <a href="#" data-slide-index="1"> <img src="images/kyungran/sub_pg2.png" alt="사진2" /></a>
+                </li>
+                <li>
+                  <a href="#" data-slide-index="2"> <img src="images/kyungran/sub_pg3.png" alt="사진3" /></a>
+                </li>
+              </ul>
+            </div>
+            <!-- 반응형 추가내용 -->
+            <div class="res">
+              <div class="box1">
+                <div class="top">
+                  <span class="d-day">D -10</span>
+                  <span class="d-day-right">홈 > 봉사카테고리 > <em>생활편의</em></span>
+                </div>
+                <div class="title">벽화길 조성 자원봉사활동 모집</div>
+                <img src="images/kyungran/sub2-icon2.png" alt="말풍선아이콘" />
+                <div class="line-back"><span class="line-point"></span></div>
+                <div class="count">
+                  <span>
+                    <em>신청 5명 &nbsp|&nbsp</em>
+                    잔여 10명
+                  </span>
+                  <span>총 15명</span>
+                </div>
+              </div>
+              <div class="box2">
+                <div class="list1 list"><span class="list-span">봉사기간</span><span>2024-05-20</span></div>
+                <div class="list3 list"><span class="list-span">봉사시간</span><span>11:00 ~ 16:00 | 총 5시간</span></div>
+                <div class="list2 list"><span class="list-span">활동장소</span><span>대구 달서구 성 당로51길 32</span></div>
+                <div class="list4 list"><span class="list-span">활동내용 </span><span>벽화그리기 봉사</span></div>
+                <hr />
+                <div class="penalty">*당일취소 시 패널티가 적용됩니다.</div>
+                <button class="apply">신청하기</button>
+                <div class="share">
+                  <span class="span1"><i class="fas fa-regular fa-heart"></i>&nbsp 100</span>
+                  <span><i class="fas fa-solid fa-cloud-arrow-down"></i>&nbsp 63</span>
+                </div>
+              </div>
+            </div>
+            <!-- 내용 -->
+            <div class="info">
+              <h3>상세모집내용</h3>
+              <div class="info-box1">
+                <div class="info-inner">
+                  <p>활동내용&nbsp: &nbsp벽화 그리기 봉사</p>
+                  <p>활동일자&nbsp: &nbsp2024. 05. 20. (월)</p>
+                  <p>활동시간&nbsp: &nbsp11:00 ~16:00 (5시간)</p>
+                  <p>활동장소&nbsp: &nbsp대구 달서구 성당로 51길 32</p>
+                  <p>봉사혜택&nbsp: &nbsp봉사시간 등록, 간식 제공</p>
+                  <p>모집인원&nbsp: &nbsp15명</p>
+                  <p>자격요건&nbsp: &nbsp해당 일자에 참여가 가능하신 분</p>
+                  <p>문의전화&nbsp: &nbsp성서복지관 담당 이수현 T. (053)-263-1212</p>
+                  <p>문의전화&nbsp: &nbsp성서복지관 담당 이수현<br> T. (053)-263-1212</p>
+                </div>
+              </div>
+              <div class="info-box2">
+                <h3>봉사활동 장소</h3>
+                <p class="p1">대구 달서구 성당로51길 32</p>
+                <p class="p2">반고개역 인근, 성남초 인근</p>
+              </div>
+              <!-- 지도 -->
+              <div class="iframe-container">
+                <iframe class="iframe"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3233.723769508144!2d128.56956277626418!3d35.85577632036529!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3565e381053d9159%3A0xe41677a1c4f57f04!2z64yA6rWs6rSR7Jet7IucIOuLrOyEnOq1rCDshLHri7nroZw1Meq4uCAzMg!5e0!3m2!1sko!2skr!4v1714701177059!5m2!1sko!2skr"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+
+            </div>
           </div>
 
-          <!-- 반응형 섹션추가 -->
-          <div class="res_right"></div>
-          <!-- 내용 -->
-          <div class="info"></div>
+          <!-- 오른쪽 섹션 -->
+          <div class="sub2_right">
+            <div class="box1">
+              <div class="top">
+                <span class="d-day">D -10</span>
+                <span class="d-day-right">홈 > 봉사카테고리 > <em>생활편의</em></span>
+              </div>
+              <div class="title">벽화길 조성 자원봉사활동 모집</div>
+              <img src="images/kyungran/sub2-icon2.png" alt="말풍선아이콘" />
+              <div class="line-back"><span class="line-point"></span></div>
+              <div class="count">
+                <span>
+                  <em>신청 5명 &nbsp|&nbsp</em>
+                  잔여 10명
+                </span>
+                <span>총 15명</span>
+              </div>
+            </div>
+            <div class="box2">
+              <div class="list1 list"><span class="list-span">봉사기간</span><span>2024-05-20</span></div>
+              <div class="list3 list"><span class="list-span">봉사시간</span><span>11:00 ~ 16:00 | 총 5시간</span></div>
+              <div class="list2 list"><span class="list-span">활동장소</span><span>대구 달서구 성 당로51길 32</span></div>
+              <div class="list4 list"><span class="list-span">활동내용 </span><span>벽화그리기 봉사</span></div>
+              <hr />
+              <div class="penalty">*당일취소 시 패널티가 적용됩니다.</div>
+              <button class="apply">신청하기</button>
+              <div class="share">
+                <span class="span1"><i class="fas fa-regular fa-heart"></i>&nbsp 100</span>
+                <span><i class="fas fa-solid fa-cloud-arrow-down"></i>&nbsp 63</span>
+              </div>
+            </div>
+          </div>
         </div>
-
-        <!-- 오른쪽 섹션 -->
-        <div class="sub2_right"></div>
       </div>
-    </div>
+    </section>
 
-    
     <script>
       $(document).ready(function () {
         $(".sub2_left .slide_gallery").bxSlider({
-          auto: true,
+          auto: true, // 자동으로 이미지 크기 조절
           autoControls: false,
           pagerCustom: ".slider-page",
           startSlide: 0, // 첫 번째 이미지로 시작하도록 설정
+          // slideWidth: 500,
+          mode: "horizontal",
+          adaptiveHeight: true, // 이미지에 맞게 슬라이더 높이 조절
         });
       });
     </script>
-
 
     <!-- <footer>
         <div class="inner">
