회원가입수정

--- a/join.html
+++ b/join.html
@@ -86,14 +86,9 @@
     <!-- End Google Tag Manager (noscript) -->
     <!-- 승아 -->
     <header>
-
-      <nav class="top-nav">
-        <a href="index.html"><img src="images/seunga/logo_bg2.png" alt="로고이미지" /></a>
-        <ul class="top-menu">
-
       <div class="hd-inner">
         <nav class="top-nav" id="nav">
-          <a href="#"><img src="images/seunga/logo_bg2.png" alt="로고이미지2" class="logo-img" /></a>
+          <a href="index.html"><img src="images/logo_bg2.png" alt="로고이미지2" class="logo-img" /></a>
 
           <ul class="top-menu">
             <li><a href="#">서비스 소개</a></li>
@@ -115,9 +110,8 @@
       </button>
       <!-- 모바일 메뉴 리스트 -->
       <div class="nav-mb">
-        <img src="images/seunga/logo.png" alt="로고이미지" />
+        <img src="images/logo.png" alt="로고이미지" />
         <ul class="nav-mb-gnb">
-
           <li><a href="#">서비스 소개</a></li>
           <li><a href="#">프로그램</a></li>
           <li><a href="#">게시판</a></li>
