페이지 연결. 상세페이지 반응형

--- a/login.html
+++ b/login.html
@@ -90,7 +90,7 @@
 
           <a href="index.html"><img src="images/seunga/logo_bg2.png" alt="로고이미지2" class="logo-img" /></a>
 
-          <a href="#"><img src="images/seunga/logo_bg2.png" alt="로고이미지2" class="logo-img" /></a>
+          <a href="index.html"images/seunga/logo_bg2.png" alt="로고이미지2" class="logo-img" /></a>
 
 
           <ul class="top-menu">
