--- a/list.html
+++ b/list.html
@@ -100,7 +100,7 @@
       </div>
     </header>
     <div class="section2 pro-list">
-      <h1 class="section-tite">나눔 프로그램</h1>
+      <h1 class="section-tite">전체 프로그램</h1>
       <!-- 카테고리 버튼-->
       <div class="tab-nav-wrapper">
         <ul class="tab-nav">
