상세페이지 연결

--- a/list.html
+++ b/list.html
@@ -157,7 +157,7 @@
       <div class="all-list1" id="work01">
         <div class="list-wrap">
           <div class="img-box">
-            <a href="#">
+            <a href="sub2.html">
               <img class="img1" src="images/kyungran/1-1.png" alt="봉사이미지" />
               <span class="span1">어르신 말벗 봉사자 모집</span>
               <span> 2024-05-20</span>
