연결 추가, 리스트페이지 css,자바 수정

--- a/join.html
+++ b/join.html
@@ -51,7 +51,7 @@
     <!-- <link rel="stylesheet" href="css/kyungran.css " /> -->
     <link rel="stylesheet" href="css/minju.css " />
     <!-- <link rel="stylesheet" href="css/res_kyungran.css" /> -->
-    <link rel="stylesheet" href="css/join.css">
+    <link rel="stylesheet" href="css/join.css" />
     <!-- 폰트어썸 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- 제이쿼리 -->
@@ -88,7 +88,7 @@
     <header>
       <div class="hd-inner">
         <nav class="top-nav" id="nav">
-          <a href="index.html"><img src="images/logo_bg2.png" alt="로고이미지2" class="logo-img" /></a>
+          <a href="index.html"><img src="images/seunga/logo_bg2.png" alt="로고이미지2" class="logo-img" /></a>
 
           <ul class="top-menu">
             <li><a href="#">서비스 소개</a></li>
