--- a/board.html
+++ b/board.html
@@ -133,8 +133,8 @@
             <div class="hd-inner clear">
             <h1>게시판</h1>
             <ul class="tab-menu">
-              <li><a href="#board-1">FAQ</a></li>
-              <li><a href="#board-2">모집게시판</a></li>
+              <li><a href="#board-1">자주 묻는 질문</a></li>
+              <li><a href="#board-2">커뮤니티</a></li>
             </ul>
         </div>
     </div>
