--- a/login.html
+++ b/login.html
@@ -113,7 +113,7 @@
       </button>
       <!-- 모바일 메뉴 리스트 -->
       <div class="nav-mb">
-        <img src="images/logo.png" alt="로고이미지" />
+        <img src="images/seunga/logo.png" alt="로고이미지" />
         <ul class="nav-mb-gnb">
           <li><a href="#">서비스 소개</a></li>
           <li><a href="#">프로그램</a></li>
