--- a/login.html
+++ b/login.html
@@ -134,7 +134,7 @@
           <!-- 에러메시지 출력할 요소 -->
           <div class="check">
             <input type="checkbox" class="remember-check" id="checkbox" />
-            <label for="checkbox">아이디 저장하기</label>
+            <label for="checkbox">&nbsp;아이디 저장하기</label>
           </div>
           <button class="loginbutton"><a href="index.html" id="alertBtn">로그인</a></button>
           <button class="joinbutton"><a href="join.html">회원가입</a></button>
