메인 수정완료

--- a/sub2.html
+++ b/sub2.html
@@ -32,9 +32,11 @@
     <meta name="twitter:description" content="나눔메이트, 나눔, 자원봉사, 프로그램, 대구봉사 " />
     <!-- css -->
     <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/seunga.css " />
+    <link rel="stylesheet" href="css/seunga.css " /> 
+    <link rel="stylesheet" href="css/list.css" />
     <link rel="stylesheet" href="css/sub2.css" />
     <link rel="stylesheet" href="css/minju.css" />
+   
     <!-- bx슬라이더 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.15/jquery.bxslider.css" integrity="sha512-rV4fiystTwIvs71MLqeLbKbzosmgDS7VU5Xqk1IwFitAM+Aa9x/8Xil4CW+9DjOvVle2iqg4Ncagsbgu2MWxKQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
