--- a/boardBox1.html
+++ b/boardBox1.html
@@ -424,61 +424,62 @@
           <li><a href="#tab2">커뮤니티</a></li>
         </ul>
 
-        <div class="tab" id="tab1">
-          <div class="board-section" id="board">
-            <div class="FAQ-box" id="board-1">
-              <button type="button" class="collapsible" onclick="collapse(this);">Q. 나눔메이트는 어떤 서비스인가요?</button>
-              <div class="content">
-                <p>
-                  <strong>A.</strong> 나눔메이트는 봉사를 하려는 사람들에게 봉사프로그램 정보를 제공하며, <br />
-                  게시판을 통해 직접 인원을 모집하여 함께 봉사프로그램에 참가 할 수 있습니다.
-                </p>
-              </div>
-              <button type="button" class="collapsible" onclick="collapse(this);">Q. 모집 마감이후에는 신청이 불가능한가요?</button>
-              <div class="content">
-                <p><strong>A.</strong> 프로그램별로 상이하기 때문에 해당 프로그램의 담당자에게 문의해주시길 바랍니다.</p>
-              </div>
-              <button type="button" class="collapsible" onclick="collapse(this);">Q. 봉사실적 조회도 가능한가요?</button>
-              <div class="content">
-                <p><strong>A.</strong> 프로그램별로 실적인증을 받을 수 있으면 실적도회도 가능합니다.</p>
-              </div>
-              <button type="button" class="collapsible" onclick="collapse(this);">Q. 신청취소는 어떻게 하나요?</button>
-              <div class="content">
-                <p>
-                  <strong>A.</strong> 신청취소의 경우 신청내역 페이지에서 취소기간중에 취소하실 수 있습니다. <br />
-                  취소기간이 지났다면 해당 프로그램 담당자에게 재문의 바랍니다.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
+      <div class="tab active" id="tab2">
+  <button id="write_bt"></button>
+  <div class="container">
+    <div class="notice_board">
+      <button id="write">글쓰기</button>
+      <!-- 제목 행 -->
+      <ul class="board_row title_row">
+        <li class="w70">번호</li>
+        <li class="w500">제목</li>
+        <li class="w120">작성자</li>
+        <li class="w120">작성일</li>
+        <li class="w100">조회</li>
+      </ul>
+      <!-- 게시글이 추가될 위치 -->
+    </div>
 
-        <div class="tab" id="tab2">
-          <button id="write_bt"></button>
-          <div class="container">
-            <div class="notice_board">
-              <button id="write">글쓰기</button>
-              <!-- title 열 -->
-              <ul class="board_row title_row">
-                <li class="w70">번호</li>
-                <li class="w500">제목</li>
-                <li class="w120">작성자</li>
-                <li class="w120">작성일</li>
-                <li class="w100">조회</li>
-              </ul>
-              <!-- 게시글 추가로 들어오는 위치 -->
-            </div>
+    <!-- 페이지 블록 -->
+    <div class="pagination">
+      <button class="before_move" onclick="before()">이전</button>
+      <div class="block">
+        <!-- 블록이 추가될 위치 -->
+      </div>
+      <button class="next_move" onclick="next()">다음</button>
+    </div>
+  </div>
+</div>
 
-            <!-- 페이지 블럭 -->
-            <div class="pagination">
-              <button class="before_move" onclick="before()">이전</button>
-              <div class="block">
-                <!-- 블럭 추가로 들어오는 위치 -->
-              </div>
-              <button class="next_move" onclick="next()">다음</button>
-            </div>
-          </div>
-        </div>
+<div class="tab" id="tab1">
+  <div class="board-section" id="board">
+    <div class="FAQ-box" id="board-1">
+      <button type="button" class="collapsible" onclick="collapse(this);">Q. 나눔메이트는 어떤 서비스인가요?</button>
+      <div class="content">
+        <p>
+          <strong>A.</strong> 나눔메이트는 봉사를 하려는 사람들에게 봉사프로그램 정보를 제공하며, <br />
+          게시판을 통해 직접 인원을 모집하여 함께 봉사프로그램에 참가 할 수 있습니다.
+        </p>
+      </div>
+      <button type="button" class="collapsible" onclick="collapse(this);">Q. 모집 마감이후에는 신청이 불가능한가요?</button>
+      <div class="content">
+        <p><strong>A.</strong> 프로그램별로 상이하기 때문에 해당 프로그램의 담당자에게 문의해주시길 바랍니다.</p>
+      </div>
+      <button type="button" class="collapsible" onclick="collapse(this);">Q. 봉사실적 조회도 가능한가요?</button>
+      <div class="content">
+        <p><strong>A.</strong> 프로그램별로 실적인증을 받을 수 있으면 실적조회도 가능합니다.</p>
+      </div>
+      <button type="button" class="collapsible" onclick="collapse(this);">Q. 신청취소는 어떻게 하나요?</button>
+      <div class="content">
+        <p>
+          <strong>A.</strong> 신청취소의 경우 신청내역 페이지에서 취소기간중에 취소하실 수 있습니다. <br />
+          취소기간이 지났다면 해당 프로그램 담당자에게 재문의 바랍니다.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
       </div>
     </div>
 
@@ -597,14 +598,13 @@
           }
         });
       });
-
-      // 페이지 로드 시 첫 번째 탭 활성화
-      const mainTabActive = document.querySelector(".tab_nav li.active");
-      if (!mainTabActive) {
-        document.querySelector(".tab_nav li:first-child a").click();
-      } else {
-        mainTabActive.querySelector("a").click();
-      }
+// 페이지 로드 시 첫 번째 탭 활성화
+const mainTabActive = document.querySelector(".tab_nav li.active");
+if (!mainTabActive) {
+  document.querySelector(".tab_nav li:first-child a").click();
+} else {
+  mainTabActive.querySelector("a").click();
+}
 
       //    총 게시글 수
       let totalPage = 120;
